@@ -16,6 +16,7 @@
 - API Change: Actor#hit is now responsible for returning null if invisible. #5264
 - API Addition: Added [Collection]#isEmpty() method to all 22 custom LibGDX-collections (e.g. Array, ObjectMap, ObjectSet, Queue, ...)
 - API Addition: StringBuilder#clear()
+- API Addition: AnimatedTiledMapTile#setAnimationBaseTime()
 
 [1.9.8]
 - Add iPhoneX images
